--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,6 @@ services:
     buildCommand: npm install
     startCommand: node server.js
     envVars:
+      - key: TEST_SYNC
+        sync: false
       - fromGroup: my-blueprint-managed-group
