--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     repo: https://github.com/kwlockwo/simple-server
     region: oregon
     numInstances: 2
-    buildCommand: npm install
+    buildCommand: echo TEST_SYNC && npm install
     startCommand: node server.js
     envVars:
       - key: TEST_SYNC
