--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ previews:
 services:
   - type: web
     runtime: node
-    name: pr-simple-server-name-change
+    name: pr-simple-server
     repo: https://github.com/kwlockwo/simple-server
     region: oregon
     numInstances: 2
